# ot-client

./: main.go
client/: CMakeCache.txt  CMakeLists.txt  Makefile  client  cmake_install.cmake  demo.cpp
lib/: libOTApi.dylib  librelic.dylib
server/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  demo.cpp  server
